--- a/styles.css
+++ b/styles.css
@@ -31,11 +31,16 @@ body {
     background-color: var(--background);
     font-family: "Rajdhani", sans-serif;
     font-size: 62.5%;
-    margin: 0 auto;
+    font-weight: lighter;
+}
+
+main {
+    margin: 0 100px;
 }
 
 #header {
     border-bottom: 3px solid var(--dividers);
+    margin: 0 75px;
 }
 
 #logo {
@@ -44,12 +49,6 @@ body {
 
 #content {
     margin: 50px;
-}
-
-#header,
-#about,
-#testimonials {
-    margin: 0 100px;
 }
 
 #content, #content * {
@@ -78,8 +77,14 @@ body {
 }
 
 .heading,
-.body {
+#about,
+#testimonials-grid,
+#buy-grid {
     margin: 0 auto;
+}
+
+#about-body {
+    width: 100%;
 }
 
 .heading {
@@ -102,13 +107,34 @@ body {
     color: var(--body-text);
     padding: 50px;
     border-radius: 25px;
-    max-width: 1000px;
     margin-bottom: 50px;
 }
 
-#testimonials > .testimonials-grid > .body {
+#testimonials > #testimonials-grid > .body {
     padding: 50px 25px;
     margin-bottom: 0;
+}
+
+#testimonials-grid {
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    margin-bottom: 50px;
+}
+
+#buy-grid {
+    grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
+    margin-bottom: 100px;
+}
+
+#about,
+#testimonials-grid,
+#buy-grid {
+    max-width: 1000px;
+}
+
+#testimonials-grid,
+#buy-grid {
+    display: grid;
+    gap: 30px;
 }
 
 .divider {
@@ -123,16 +149,167 @@ body {
     margin-bottom: 25px;
 }
 
-.testimonials-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 30px;
-    margin: 0 auto;
-    max-width: 1000px;
+.profile-icon {
+    padding: 0 5px 10px 5px;
+    border-bottom: 3px solid var(--dividers);
 }
 
 .profile-banner {
     display: flex;
     gap: 15px;
     margin-bottom: 25px;
+}
+
+#buy-grid > .body {
+    font-size: 1.2rem;
+    width: 100%;
+    margin: 0;
+    text-align: center;
+}
+
+.buy-grid-heading,
+.spec-heading {
+    font-weight: bold;
+}
+
+.buy-grid-heading {
+    font-size: 1.4rem;
+    letter-spacing: 1.5px;
+    padding: 5px 0;
+    width: 125px;
+    margin: 0 auto;
+}
+
+.configure {
+	border: none;
+	padding: 10px 0;
+	cursor: pointer;
+    width: 125px;
+    font-size: 1.2rem;
+    margin-top: 35px;
+    border-radius: 5px 15px;
+}
+
+.buy-grid-subheading {
+    margin-top: 10px;
+    font-weight: initial;
+}
+
+.buy-grid-heading,
+.specs {
+    border-radius: 5px 15px;
+}
+
+#aqua {
+    color: var(--aqua);
+}
+
+#terra {
+    color: var(--terra);
+}
+
+#fuoco {
+    color: var(--fuoco);
+}
+
+#glassia {
+    color: var(--glassia);
+}
+
+#aqua > .buy-grid-heading,
+#aqua > .configure {
+    background-color: var(--aqua);
+    color: var(--aqua-text);
+}
+
+#terra > .buy-grid-heading,
+#terra > .configure {
+    background-color: var(--terra);
+    color: var(--terra-text);
+}
+
+#fuoco > .buy-grid-heading,
+#fuoco > .configure {
+    background-color: var(--fuoco);
+    color: var(--fuoco-text);
+}
+
+#glassia > .buy-grid-heading,
+#glassia > .configure {
+    background-color: var(--glassia);
+    color: var(--glassia-text);
+}
+
+.buy-icons {
+    margin: 35px 0;
+}
+
+.specs {
+    border: 2px solid;
+    padding: 20px 20px 30px 20px;
+}
+
+.specs-heading {
+    padding-bottom: 15px;
+    border-bottom: 2px solid;
+}
+
+.specs-body {
+    margin-top: 30px;
+}
+
+.specs-line {
+    display: flex;
+    justify-content: space-between;
+}
+
+.specs-line:first-of-type {
+    margin: 0 15px;
+}
+
+.specs-line:not(:first-of-type) {
+    margin: 15px 15px 0 15px;
+}
+
+footer {
+    margin: 0 75px;
+    border-top: 3px solid var(--dividers);
+}
+
+#footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 50px 0;
+    margin: 0 50px;
+    color: var(--body-text);
+    font-size: 1.2rem;
+}
+
+#footer-left h3 {
+    margin-bottom: 10px;
+}
+
+#footer-links a {
+    padding: 5px 10px;
+    border-radius: 5px;
+    color:var(--body-text);
+    background-color: var(--boxes);
+    text-decoration: none;
+}
+
+#footer-logo {
+    width: 100px;
+}
+
+@media screen and (min-width: 2125px) {
+    #about {
+        width: calc(48% + 25px);
+        max-width: 1190px;
+    }
+
+    #testimonials-grid,
+    #buy-grid {
+        max-width: 2425px;
+    }
 }
