--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,8 @@ html {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-weight: initial;
+    letter-spacing: 1px;
 }
 
 main {
@@ -47,7 +49,6 @@ body {
     background-color: var(--background);
     font-family: "Rajdhani", sans-serif;
     font-size: 62.5%;
-    font-weight: lighter;
 }
 
 /* Preliminary (END) */
@@ -65,7 +66,8 @@ body {
 .heading {
     text-align: center;
     font-size: 1.6rem;
-    letter-spacing: 1px;
+    font-weight: bold;
+    letter-spacing: 1.5px;
     background-color: var(--headings);
     color: var(--headings-text);
     width: 250px;
@@ -186,7 +188,7 @@ body {
 }
 
 #testimonials-grid {
-    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(370px, 1fr));
     margin-bottom: 50px;
 }
 
@@ -243,7 +245,7 @@ body {
 	padding: 10px 0;
 	cursor: pointer;
     width: 125px;
-    font-size: 1.2rem;
+    font-size: 1rem;
     margin-top: 35px;
     border-radius: 5px 15px;
 }
@@ -256,7 +258,7 @@ body {
 }
 
 #buy-grid {
-    grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(485px, 1fr));
     margin-bottom: 100px;
 }
 
