--- a/styles.css
+++ b/styles.css
@@ -477,7 +477,7 @@ footer {
 @media screen and (max-width: 450px) {
     #main-image {
         position: relative;
-        right: 25px;
+        left: 25px;
     }
 }
 
