--- a/styles.css
+++ b/styles.css
@@ -476,8 +476,7 @@ footer {
 
 @media screen and (max-width: 450px) {
     #main-image {
-        position: relative;
-        left: 25px;
+        width: 100vw;
     }
 }
 
