--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,4 @@
-/* Preliminary (START) */
-
+/* Preliminary */
 @import url('https://fonts.googleapis.com/css2?family=Rajdhani&display=swap');
 
 :root {
@@ -51,10 +50,7 @@ body {
     font-size: 62.5%;
 }
 
-/* Preliminary (END) */
-
-/* General Element Styling (START) */
-
+/* General Element Styling */
 .divider {
     width: 100%;
     height: 3px;
@@ -74,12 +70,18 @@ body {
     padding: 10px 0;
     border-radius: 5px 25px;
     margin: 0 auto 25px auto;
-    
 }
 
-/* General Element Styling (END) */
+.buttons * {
+    height: 65px;
+    width: 65px;
+}
 
-/* Multi-Section Selectors (START) */
+/* Multi-Section Selectors */
+#header-buttons,
+#nav-buttons {
+    gap: 3vw;
+}
 
 #testimonials-grid,
 #builds-grid,
@@ -104,31 +106,17 @@ body {
     border-radius: 5px 15px;
 }
 
-/* Multi-Section Selectors (END) */
-
-/* Header (START) */
-
+/* Header */
 #logo {
     width: 125px;
-}
-
-.nav-link {
-    font-size: 1.8rem;
-    letter-spacing: 2px;
-    font-weight: bold;
-    color: var(--headings);
-    text-decoration: none;
-}
-
-.nav-links {
-    gap: 3vw;
 }
 
 #content-header {
     margin: 50px;
 }
 
-#content-header, #content-header * {
+#content-header,
+#content-header * {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -139,10 +127,7 @@ body {
     margin: 0 75px;
 }
 
-/* Header (END) */
-
-/* Image (START) */
-
+/* Image */
 #main-image {
     display: block;
     margin: 100px auto;
@@ -150,18 +135,12 @@ body {
     max-width: 750px;
 }
 
-/* Image (END) */
-
-/* About (START) */
-
+/* About */
 #about-body p:first-of-type {
     margin-bottom: 15px;
 }
 
-/* About (END) */
-
-/* Testimonials (START) */
-
+/* Testimonials */
 .profile-icon {
     padding: 0 5px 10px 5px;
     border-bottom: 3px solid var(--dividers);
@@ -183,10 +162,7 @@ body {
     margin-bottom: 50px;
 }
 
-/* Testimonials (END) */
-
-/* builds Yours (START) */
-
+/* Build Yours */
 .builds-grid-heading {
     font-size: 1.4rem;
     letter-spacing: 1.5px;
@@ -295,10 +271,7 @@ body {
     color: var(--glassia-text);
 }
 
-/* builds Yours (END) */
-
-/* Disclaimer (START) */
-
+/* Disclaimer */
 #disclaimer-body {
     text-align: center;
     font-size: 1.4rem;
@@ -309,18 +282,11 @@ body {
     margin-bottom: 100px;
 }
 
-/* Disclaimer (END) */
-
-/* Footer (START) */
-
-#content-footer {
-    display: flex;
-    justify-content: center;
-    gap: 3vw;
-}
-
-.nav-link {
-    height: 65px;
+/* Footer */
+footer p {
+    color: var(--body-text);
+    font-size: 1.4rem;
+    text-align: center;
 }
 
 footer {
@@ -329,7 +295,16 @@ footer {
     border-top: 3px solid var(--dividers);
 }
 
-/* Footer (END) */
+/* Navigation */
+#nav-buttons {
+    display: flex;
+    justify-content: center;
+    gap: 3vw;
+    position: sticky;
+    bottom: 0;
+    padding: 20px 0;
+    background-color: rgba(26, 0, 52, 0.75);
+}
 
 @media screen and (min-width: 2245px) {
     #about-grid,
@@ -398,8 +373,9 @@ footer {
         width: 125px;
     }
 
-    .nav-link * {
+    .buttons * {
         width: 55px;
+        height: 55px;
     }
 
     #main-image {
@@ -420,7 +396,6 @@ footer {
         margin: 0;
     }
     
-    .nav-link,
     .heading,
     .profile-heading {
         font-size: 1.4rem;
@@ -436,7 +411,8 @@ footer {
     .builds-grid-heading,
     .builds-grid-subheading,
     .specs-heading,
-    #disclaimer-body p {
+    #disclaimer-body p,
+    footer p {
         font-size: 1.2rem;
     }
 
@@ -452,16 +428,13 @@ footer {
         width: 100px;
     }
 
+    .buttons * {
+        width: 45px;
+        height: 45px;
+    }
+    
     #main-image {
         margin: 50px auto;
-    }
-
-    .nav-link * {
-        width: 45px;
-    }
-
-    .nav-link {
-        height: 45px;
     }
 
     .specs-line {
