--- a/styles.css
+++ b/styles.css
@@ -130,10 +130,40 @@ body {
 
 /* Image */
 #main-image {
-    display: block;
+    background-image: url(SVGs/PC_Aqua.svg);
+    background-repeat: no-repeat;
+    background-size: contain;
     margin: 100px auto;
-    width: 75%;
-    max-width: 750px;
+    width: 69.5%;
+    max-width: 675px;
+    height: 50vw;
+    max-height: 495px;
+
+    animation-name: slideshow;
+    animation-direction: alternate;
+    animation-play-state: running;
+    animation-timing-function: ease-in-out;
+    animation-duration: 15s;
+    animation-fill-mode: both;
+    animation-iteration-count: infinite;
+}
+
+@keyframes slideshow {
+    0%, 13% {
+        background-image: url(SVGs/PC_Aqua.svg);
+    }
+
+    19.5%, 46.5% {
+        background-image: url(SVGs/PC_Terra.svg);
+    }
+
+    53%, 80% {
+        background-image: url(SVGs/PC_Fuoco.svg);
+    }
+
+    86.5%, 99.5% {
+        background-image: url(SVGs/PC_Glassia.svg);
+    }
 }
 
 /* About */
