--- a/styles.css
+++ b/styles.css
@@ -140,7 +140,7 @@ body {
     max-height: 495px;
 
     animation-name: slideshow;
-    animation-direction: alternate;
+    animation-direction: alternate-reverse;
     animation-play-state: running;
     animation-timing-function: ease-in-out;
     animation-duration: 15s;
@@ -150,19 +150,19 @@ body {
 
 @keyframes slideshow {
     0%, 13% {
-        background-image: url(SVGs/PC_Aqua.svg);
+        background-image: url(SVGs/PC_Glassia.svg);
     }
 
     19.5%, 46.5% {
-        background-image: url(SVGs/PC_Terra.svg);
-    }
-
-    53%, 80% {
         background-image: url(SVGs/PC_Fuoco.svg);
     }
 
+    53%, 80% {
+        background-image: url(SVGs/PC_Terra.svg);
+    }
+
     86.5%, 99.5% {
-        background-image: url(SVGs/PC_Glassia.svg);
+        background-image: url(SVGs/PC_Aqua.svg);
     }
 }
 
