Trial for .builds-icon sizing on mobile

--- a/styles.css
+++ b/styles.css
@@ -494,3 +494,9 @@ footer {
         padding: 35px 0;
     }
 }
+
+@media screen and (max-width: 400px) {
+    .builds-icons {
+        width: 200px;
+    }
+}
