Changed units for sizing #main-image

--- a/styles.css
+++ b/styles.css
@@ -134,9 +134,9 @@ body {
     background-repeat: no-repeat;
     background-size: contain;
     margin: 100px auto;
-    width: 69.5%;
+    width: 50vw;
     max-width: 675px;
-    height: 50vw;
+    height: 36.75vw;
     max-height: 495px;
 
     animation-name: slideshow;
