--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-/* Preliminary */
+/* Foundation */
 @import url('https://fonts.googleapis.com/css2?family=Rajdhani&display=swap');
 
 :root {
@@ -50,13 +50,24 @@ body {
     font-size: 62.5%;
 }
 
-/* General Element Styling */
-.divider {
-    width: 100%;
+/* General Styling */
+.body:after {
+    content: '';
+    display: block;
+    margin: 0 auto;
     height: 3px;
-    background-color: var(--dividers);
     position: relative;
-    bottom: -50px;
+    top: 50px;
+    background-color: var(--dividers);
+}
+
+#about-body:after,
+#builds-grid > .body:after {
+    width: 100%;
+}
+
+#testimonials-grid > .body:after {
+    width: calc(100% - 15px);
 }
 
 .heading {
@@ -77,7 +88,7 @@ body {
     width: 65px;
 }
 
-/* Multi-Section Selectors */
+/* Multi-selectors */
 #header-buttons,
 #nav-buttons {
     gap: 25px;
@@ -184,7 +195,7 @@ body {
 }
 
 #testimonials-grid > .body {
-    padding: 50px 25px;
+    padding: 50px 35px;
     margin-bottom: 0;
 }
 
@@ -193,7 +204,7 @@ body {
     margin-bottom: 50px;
 }
 
-/* Build Yours */
+/* Builds */
 .builds-grid-heading {
     font-size: 1.4rem;
     letter-spacing: 1.5px;
@@ -338,6 +349,7 @@ footer {
 }
 
 @media screen and (min-width: 2245px) {
+    /* Multi-selectors */
     #about-grid,
     #testimonials-grid,
     #builds-grid,
@@ -345,6 +357,7 @@ footer {
         max-width: 2425px;
     }
     
+    /* About */
     #about-body {
         grid-area: about;
     }
@@ -357,6 +370,7 @@ footer {
         gap: 30px;
     }
 
+    /* Disclaimer */
     #disclaimer-body {
         grid-area: disclaimer;
     }
@@ -371,20 +385,32 @@ footer {
 }
 
 @media screen and (max-width: 800px) {
+    /* Header */
     #content-header {
         margin:  45px 0;
     }
 }
 
 @media screen and (max-width: 685px) {
+    /* Foundation */
     main {
         margin: 0 25px;
     }
     
-    .divider {
-        bottom: -35px;
+    /* General Element Styling */
+    .buttons * {
+        width: 55px;
+        height: 55px;
     }
 
+    #about-body:after,
+    #builds-grid > .body:after,
+    #testimonials-grid > .body:after {
+        width: calc(100% - 50px);
+        top: 35px;
+    }
+
+    /* Multi-selectors */
     #header,
     footer {
         margin: 0 25px;
@@ -405,37 +431,45 @@ footer {
         grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
     }
     
+    /* Header */
     #logo {
         width: 125px;
     }
 
-    .buttons * {
-        width: 55px;
-        height: 55px;
-    }
-
+    /* Image */
     #main-image {
         margin: 75px auto;
     }
 
+    /* Builds */
     .configure {
         margin-top: 35px;
     }
 
+    /* Disclaimer */
     #disclaimer-body {
         margin-bottom: 75px;
     }
 
+    /* Navigation */
     #nav-buttons {
         padding: 15px 0;
     }
 }
 
 @media screen and (max-width: 500px) {
+    /* Foundation */
     main {
         margin: 0;
     }
     
+    /* General Styling */
+    .buttons * {
+        width: 45px;
+        height: 45px;
+    }
+    
+    /* Multi-selectors */
     .heading,
     .profile-heading {
         font-size: 1.4rem;
@@ -464,19 +498,17 @@ footer {
         padding: 0 25px 25px 25px;
     }
     
+    /* Header */
     #logo {
         width: 100px;
     }
-
-    .buttons * {
-        width: 45px;
-        height: 45px;
-    }
     
+    /* Image */
     #main-image {
         margin: 50px auto;
     }
 
+    /* Builds */
     .specs-line {
         font-size: 1rem;
     }
@@ -490,12 +522,14 @@ footer {
     .gpu {
         margin: 15px 0 0 0;
     }
-
-    #disclaimer-body {
-        margin-bottom: 50px;
-    }
-
+    
+    /* Footer */
     footer {
         padding: 35px 0;
+    }
+
+    /* Disclaimer */
+    disclaimer-body {
+        margin-bottom: 50px;
     }
 }
